--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@types/chai": "^4.3.9",
     "@wdio/cli": "^8.16.20",
     "@wdio/cucumber-framework": "^8.16.19",
     "@wdio/local-runner": "^8.16.20",
@@ -8,6 +9,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "chai": "^4.3.10",
     "webdriverio": "^8.16.20"
   },
   "scripts": {
